# componentize-py

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml  test.yaml
component-init/: Cargo.toml
component-init/src/: lib.rs
runtime/src/: lib.rs
src/: bindgen.rs  bindings.rs  command.rs  componentize.rs  lib.rs  python.rs  summary.rs  test.rs
src/test/: echoes.rs  simple.rs
src/test/wit/: simple-export.wit  simple-import-and-export.wit
test-generator/src/: lib.rs
wasm-convert/: Cargo.toml
wasm-convert/src/: lib.rs
wit/: init.wit
