[package]
name = "componentize-py"
version = "0.2.2"
edition = "2021"
exclude = ["cpython"]

[lib]
name = "componentize_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = [ "derive" ] }
tar = "0.4.38"
tempfile = "3.5.0"
zstd = "0.11.1"
componentize-py-shared = { path = "shared" }
wasmparser = "0.107.0"
wasm-encoder = "0.29.0"
wit-parser = { path = "../component-linking-demo/wasm-tools/crates/wit-parser" } #{ git = "https://github.com/dicej/wasm-tools", branch = "linking" }
wit-component = { path = "../component-linking-demo/wasm-tools/crates/wit-component" } #{ git = "https://github.com/dicej/wasm-tools", branch = "linking" }
indexmap = "1.9.3"
bincode = "1.3.3"
heck = "0.4.1"
cap-std = "1.0.15"
pyo3 = { version = "0.18.3", features = ["abi3-py37", "extension-module"], optional = true }
wasmtime-wasi = "10.0.0"
wasi-common = "10.0.0"
wasmtime = { version = "10.0.0", features = ["component-model"] }
once_cell = "1.17.1"
component-init = { path = "component-init" }
async-trait = "0.1.68"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }

[dev-dependencies]
async-trait = "0.1.68"
once_cell = "1.17.1"
proptest = "1.1.0"
hex = "0.4.3"

[build-dependencies]
anyhow = "1.0.68"
tar = "0.4.38"
zstd = "0.11.1"
test-generator = { path = "test-generator" }

[workspace]
members = [
  "runtime",
  "shared",
  "test-generator",
  "component-init",
  "wasm-convert",
]
